styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui, sans-serif;
    background-color: #e2e8f0; 
}

.container {
    display: grid;
    height: 100vh;
    grid-template-columns: 250px 1fr;
    grid-template-rows: max-content 1fr; 
}

.sidebar {
    grid-row: span 2;
    background-color: #1992d4; /* The Odin Project blue */
    color: white;
    padding: 20px;
    
    /* Flexbox for the inner layout */
    display: flex;
    flex-direction: column;
    gap: 50px; 
}

.header {
    background-color: white;
    padding: 20px;
    box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); /* Subtle drop shadow */
}

.main-content {
    padding: 30px;
}

.nav-link {
    display: flex;
}

